--- a/index.css
+++ b/index.css
@@ -1,119 +1,124 @@
 @import url(https://fonts.googleapis.com/css?family=Lato);
 
 html {
-    min-height: 100%
+  min-height: 100%
 }
 
 body{
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ff6a00+0,ff9d00+100 */
-	background: #ff6a00; /* Old browsers */
-	background: -moz-linear-gradient(top, #ff6a00 0%, #ff9d00 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(top, #ff6a00 0%,#ff9d00 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to bottom, #ff6a00 0%,#ff9d00 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff6a00', endColorstr='#ff9d00',GradientType=0 ); /* IE6-9 */
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ff6a00+0,ff9d00+100 */
+  background: #ff6a00; /* Old browsers */
+  background: -moz-linear-gradient(top, #ff6a00 0%, #ff9d00 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #ff6a00 0%,#ff9d00 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #ff6a00 0%,#ff9d00 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff6a00', endColorstr='#ff9d00',GradientType=0 ); /* IE6-9 */
 
-	color: #FFFFFF;
-	font-family: 'Lato', Helvetica, sans-serif;
-	
-	max-width: 100%;
-	overflow-x: hidden;
+  color: #FFFFFF;
+  font-family: 'Lato', Helvetica, sans-serif;
+
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .center {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .float-right {
-	float: right;
+  float: right;
 }
 
-@media screen and (max-width: 600px) {
-	span.float-right {
-		margin-left: 15px;
-		width: 40%;
-	}
-	span.float-right img {
-		width: 100%;
-		height: 100%;
-	}
+@media screen and (max-width: 600px) { /* For mobile devices */
+  span.float-right {
+    margin-left: 15px;
+    width: 40%; /* 40% seems like a good width */
+  }
+  span.float-right img {
+    width: 100%;
+    height: 100%;
+    /* Overrides px-based image sizes. */
+  }
 }
 
 .intro {
-	text-align:center; 
-	margin: auto;
-	width: 600px;
-	height: 378px;
-	border: 0px solid #000000;
-	padding: 10px;
+  text-align:center; 
+  margin: auto;
+  width: 600px;
+  height: 378px;
+  border: 0px solid #000000;
+  padding: 10px;
 }
-@media screen and (max-width: 600px) {
-	.intro {
-		width: 95%;
-		height: auto;
-	}
+
+@media screen and (max-width: 600px) { /* For mobile devices */
+  .intro {
+    width: 95%;
+    height: auto;
+  }
 }
 
 .linkList {
-	text-align:center;
-	border:0px solid #666;
-	text-shadow: 3px 3px #000000;
-	font-size: 36px;
-	/* inline-block inline-table table -webkit-inline-box -webkit-box */
+  text-align:center;
+  border:0px solid #666;
+  text-shadow: 3px 3px #000000;
+  font-size: 36px;
 }
 
-@media screen and (max-width: 500px) {
-	.linkList {
-		display: table;
-		width: 100%;
-	}
+@media screen and (max-width: 500px) { /* For smaller mobile devices */
+  .linkList {
+    display: table;
+    width: 100%;
+    /* This prevents the links from showing up next to Tin's penguin, causing
+     * some links to be centered between the penguin and left side, while
+     * others are centered between the left and right sides.
+     */
+  }
 }
 
 .linkList2 {
-	text-align:center;   
-	border:0px solid #666;	
-	text-shadow: 2px 2px #000000;
-	font-size: 28px
+  text-align:center;   
+  border:0px solid #666;	
+  text-shadow: 2px 2px #000000;
+  font-size: 28px
 }
 
 .link {
-    display:inline-block;
-    margin:5px 15px;
-    padding:0px;
-    border:0px solid #CCC;	
+  display:inline-block;
+  margin:5px 15px;
+  padding:0px;
+  border:0px solid #CCC;	
 }
 
 .logo {
-	border-width: 0px;
-	width: 320px;
-	height: 100px;
+  border-width: 0px;
+  width: 320px;
+  height: 100px;
 }
 
 a {
-	color: #FFFFFF;
-	text-decoration: none;
+  color: #FFFFFF;
+  text-decoration: none;
 }
 
 a:hover {
-	color: #DDDDDD;
-	text-decoration: none;
+  color: #DDDDDD;
+  text-decoration: none;
 }
 
 h3 {
-	text-shadow: 2px 2px #000000;
+  text-shadow: 2px 2px #000000;
 }
 
 hr {
-	max-width: 1200px;
-	margin-left: auto;
-	margin-right: auto;
-	height: 8px;
-	background-color:#000000;
-	border: 0 none;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  height: 8px;
+  background-color:#000000;
+  border: 0 none;
 }
 
 img.penguin {
-	width: 212px;
-	height: 377px;
+  width: 212px;
+  height: 377px;
 }
